--- a/practicetwo.html
+++ b/practicetwo.html
@@ -15,7 +15,7 @@
   <br><a href="#media">Media</a>
   <br><a href="#bottomOfPage">Bottom of Page</a>
 
-  <div id="introduction">
+  <div id="introduction" class="introduction intromain">
     <h3>Introduction</h3>
     <p>Listening to (or making) music increases blood flow to brain regions that generate and control emotions. It's a mood lifter on our worst days, and it can even take us back to past memories. So what's happening when we listen to music?</p>
     <ul>
