--- a/beefbrisketnoodlesoup.html
+++ b/beefbrisketnoodlesoup.html
@@ -9,13 +9,14 @@
 <body>
     <h1>Spicy Beef Brisket Noodle Soup</h1>
     <p><img src="./beefnoodlesoup.jpeg" alt="Bowl of noodles and soft beef brisket seasoned in spices"></p>
-    
-    <p><h3>Description:</h3></p>
-    <p>A bowl of noodles in a well-spiced broth topped with tender beef cubes, spicy beef noodle soup is pungent, fragrant and very comforting indeed.</p>
+
+    <h3>Description:</h3>
+    <p>A bowl of noodles in a well-spiced broth topped with tender beef cubes, spicy beef noodle soup is pungent,
+        fragrant and very comforting indeed.</p>
     <p>Perfect for cold days where you are craving something hearty or just in the mood for something delicious!</p>
     <!-- List of ingredients go below -->
 
-    <p><ul>
+    <ul>
         <li>600 g beef, cut in cubes - 21oz</li>
         <li>2 tablespoon cooking oil</li>
         <li>4 cloves garlic, minced</li>
@@ -25,24 +26,51 @@
         <li>½ teaspoon sugar</li>
         <li>Noodles</li>
         <li>Spinach - or pak choi / bok choy</li>
-        <li>Fresh coriander, chopped</li> 
-    </ul></p>
+        <li>Fresh coriander, chopped</li>
+    </ul>
     <!-- End of ingredients. Add directions how to cook below -->
 
-    <p><h3>Directions:</h3></p>
+    <h3>Directions:</h3>
     <ol>
-        <p><strong>Blanch the beef</strong></p>
-        <li>Add beef cubes to a pot filled with water, Bring it to a full boil. Remove any impurities that appears on the surface. Drain then put the beef back into the pot.
-        <p><strong>Prepare the soup</strong></p>
-        <li>Heat up oil in a wok (or a deep frying pan) over medium heat. Stir in garlic, Sichuan chilli bean paste and chilli powder.</li>
-        <li>Cook until fragrant (do not burn). Pour in 1500ml (6½ cups) hot water. Cover and leave to simmer for 5 minutes.</li>
-        <p><strong>Simmer the beef</strong></p>
-        <li>Through a sieve, pour the spiced soup into the beef pot. Add ginger, scallions and all the other spices.</li>
-        <li>Bring the soup to a boil then simmer for 1 to 1.5 hours. Once the beef becomes tender cooked, discard the ginger, scallions and spices.</li>
-        <p><strong>Cook the noodles</strong></p>
-        <li>Cook the noodles in another pot with plenty of water. At the end of the process, quickly blanch spinach (or pak choi) in the same pot. Drain and rinse the noodles and vegetable under cold water for a few seconds.</li>
-        <p><strong>Assemble the dish</strong></p>
-        <li>Place the noodles and vegetable in serving bowls. Pour in the broth then place the beef on top. Sprinkle coriander to garnish. Serve immediately. </li>
+        <li>
+            <p><strong>Blanch the beef</strong></p>
+            <p>
+                Add beef cubes to a pot filled with water, Bring it to a full boil. Remove any impurities that appears
+                on the surface. Drain then put the beef back into the pot.
+            </p>
+        </li>
+        <li>
+            <p><strong>Prepare the soup</strong></p>
+            <ul>
+                <li>
+                    <p>Heat up oil in a wok (or a deep frying pan) over medium heat. Stir in garlic, Sichuan chilli bean
+                        paste and chili powder.</p>
+                </li>
+                <li>
+                    <p>Cook until fragrant (do not burn). Pour in 1500ml (6½ cups) hot water. Cover and leave to simmer
+                        for 5
+                        minutes.</p>
+                </li>
+            </ul>
+        </li>
+        <li>
+            <p><strong>Simmer the beef</strong></p>
+        </li>
+        <li>Through a sieve, pour the spiced soup into the beef pot. Add ginger, scallions and all the other spices.
+        </li>
+        <li>Bring the soup to a boil then simmer for 1 to 1.5 hours. Once the beef becomes tender cooked, discard the
+            ginger, scallions and spices.</li>
+        <li>
+            <p><strong>Cook the noodles</strong></p>
+        </li>
+        <li>Cook the noodles in another pot with plenty of water. At the end of the process, quickly blanch spinach (or
+            pak choi) in the same pot. Drain and rinse the noodles and vegetable under cold water for a few seconds.
+        </li>
+        <li>
+            <p><strong>Assemble the dish</strong></p>
+        </li>
+        <li>Place the noodles and vegetable in serving bowls. Pour in the broth then place the beef on top. Sprinkle
+            coriander to garnish. Serve immediately. </li>
     </ol>
 </body>
 
