moved images to own folder

--- a/beefbrisketnoodlesoup.html
+++ b/beefbrisketnoodlesoup.html
@@ -8,7 +8,7 @@
 
 <body>
     <h1>Spicy Beef Brisket Noodle Soup</h1>
-    <p><img src="./beefnoodlesoup.jpeg" alt="Bowl of noodles and soft beef brisket seasoned in spices"></p>
+    <p><img src="./images/beefnoodlesoup.jpeg" alt="Bowl of noodles and soft beef brisket seasoned in spices"></p>
 
     <h3>Description:</h3>
     <p>A bowl of noodles in a well-spiced broth topped with tender beef cubes, spicy beef noodle soup is pungent,
