--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Odin Recipes!</h1>
     <p><a href="./beefbrisketnoodlesoup.html">Spicy Beef Noodle Soup!</a></p>
     <p><a href="./kimchifriedrice.html">Kimchi Fried Rice</a></p>
     <p><a href="./padthai.html">Pad Thai</a></p>
