--- a/padthai.html
+++ b/padthai.html
@@ -8,7 +8,7 @@
 
 <body>
     <h1>Pad Thai</h1>
-    <p><img src="padthai.jpeg"></p>
+    <p><img src="./images/padthai.jpeg"></p>
     
     <p><h3>Description</h3></p>
     <p>Delicious sweet and salty noodles alongside vegetables and your choice of protien.</p>
