--- a/practicetwo.html
+++ b/practicetwo.html
@@ -44,9 +44,9 @@
   </div>
   
   <div id="media">
-    <br><img src="./musicbrain.jpeg" alt="A picture of the human brain with different parts mapped out showing what parts process music" width="300" height="240">  
+    <br><img src="./images/musicbrain.jpeg" alt="A picture of the human brain with different parts mapped out showing what parts process music" width="300" height="240">  
     <video src="https://www.youtube.com/watch?v=g6-C4NmK0fM" height="300" width="240" controls>Video Not Supported</video>
-    <a href="https://www.hopkinsmedicine.org/health/wellness-and-prevention/keep-your-brain-young-with-music#:~:text=It%20provides%20a%20total%20brain,%2C%20mental%20alertness%2C%20and%20memory." target="_blank"><img src="./brainmusic2.webp" height="300" width="240"></a>  
+    <a href="https://www.hopkinsmedicine.org/health/wellness-and-prevention/keep-your-brain-young-with-music#:~:text=It%20provides%20a%20total%20brain,%2C%20mental%20alertness%2C%20and%20memory." target="_blank"><img src="./images/brainmusic2.webp" height="300" width="240"></a>  
     <br><em>Click the last picture above to read more about how music affects the brain!</em>
   <!-- Youtube player doesn't work unless I use the embedded code YT provides. Purposely not updating to avoid their TOS -->
     </div>
