--- a/kimchifriedrice.html
+++ b/kimchifriedrice.html
@@ -8,7 +8,7 @@
 
 <body>
     <h1>Kimchi Fried Rice</h1>
-    <img src="kimchifriedrice.jpeg" alt="Fried Rice Seasoned with Kimchi and an Over-easy Egg">
+    <img src="./images/kimchifriedrice.jpeg" alt="Fried Rice Seasoned with Kimchi and an Over-easy Egg">
 
     <p><h3>Description</h3></p>
     <p>A quick and easy meal using delicious, inexpensive ingredients.</p>
