formatting and corrections to code structure

--- a/beefbrisketnoodlesoup.html
+++ b/beefbrisketnoodlesoup.html
@@ -55,22 +55,35 @@
         </li>
         <li>
             <p><strong>Simmer the beef</strong></p>
+                <ul>
+                    <li>
+                        Through a sieve, pour the spiced soup into the beef pot. Add ginger, scallions and all the other spices.
+                    </li>
+                    <li>Bring the soup to a boil then simmer for 1 to 1.5 hours. Once the beef becomes tender cooked, discard the
+                        ginger, scallions and spices.</li>
+                    <li>
+                        Through a sieve, pour the spiced soup into the beef pot. Add ginger, scallions and all the other spices.
+                    </li>
+                    <li>Bring the soup to a boil then simmer for 1 to 1.5 hours. Once the beef becomes tender cooked, discard the
+                        ginger, scallions and spices.</li>
+                </ul>
         </li>
-        <li>Through a sieve, pour the spiced soup into the beef pot. Add ginger, scallions and all the other spices.
-        </li>
-        <li>Bring the soup to a boil then simmer for 1 to 1.5 hours. Once the beef becomes tender cooked, discard the
-            ginger, scallions and spices.</li>
         <li>
             <p><strong>Cook the noodles</strong></p>
-        </li>
-        <li>Cook the noodles in another pot with plenty of water. At the end of the process, quickly blanch spinach (or
-            pak choi) in the same pot. Drain and rinse the noodles and vegetable under cold water for a few seconds.
-        </li>
+            <ul>    
+                <li>Cook the noodles in another pot with plenty of water. At the end of the process, quickly blanch spinach (or
+                 pak choi) in the same pot. Drain and rinse the noodles and vegetable under cold water for a few seconds.
+                </li>
+            </ul>    
         <li>
             <p><strong>Assemble the dish</strong></p>
-        </li>
-        <li>Place the noodles and vegetable in serving bowls. Pour in the broth then place the beef on top. Sprinkle
-            coriander to garnish. Serve immediately. </li>
+        
+            <ul>
+                 <li>Place the noodles and vegetable in serving bowls. Pour in the broth then place the beef on top. Sprinkle
+                coriander to garnish. Serve immediately. 
+                </li>
+            </ul>
+        </li>        
     </ol>
 </body>
 
