Corrections to headings

--- a/kimchifriedrice.html
+++ b/kimchifriedrice.html
@@ -10,13 +10,13 @@
     <h1>Kimchi Fried Rice</h1>
     <img src="./images/kimchifriedrice.jpeg" alt="Fried Rice Seasoned with Kimchi and an Over-easy Egg">
 
-    <p><h3>Description</h3></p>
+    <h3>Description</h3>
     <p>A quick and easy meal using delicious, inexpensive ingredients.</p>
     <p>Perfect for an easy dinner or a quick snack. Best enjoyed over a beef and with friends!</p>
     
     <!-- Ingredients go below -->
     
-    <p><h3>Ingredients</h3></p>
+    <h3>Ingredients</h3>
     <ul>
         <li>Kimchi</li>
         <li>Rice</li>
