--- a/practicetwo.html
+++ b/practicetwo.html
@@ -21,8 +21,11 @@
     <ul>
       <li>The limbic system, which is involved in processing emotions and controlling memory, “lights” up when our ears perceive music.</li>
       <li>The chills you feel when you hear a particularly moving piece of music may be the result of dopamine, a neurotransmitter that triggers sensations of pleasure and well-being.</li>
-      <li>As your brain becomes familiar with a particular song, your body may release dopamine upon hearing just the first few notes of the song.</li> 
-      <p><em>Just as Pavlov’s dogs learned to associate food with a ringing bell and eventually began drooling at the sound of a bell, even when no food was in sight - our bodies actively anticipate pleasure upon hearing familiar notes.</em></p>
+      <li>As your brain becomes familiar with a particular song, your body may release dopamine upon hearing just the first few notes of the song.
+        <ul>
+            <li><em>Just as Pavlov’s dogs learned to associate food with a ringing bell and eventually began drooling at the sound of a bell, even when no food was in sight - our bodies actively anticipate pleasure upon hearing familiar notes.</em></li>
+        </ul>
+      </li>  
       <li>Interestingly, music can affect our mood even if we can’t recognize or replicate the notes and rhythm. 
       <li>Science has documented numerous instances of people who suffered <strong>brain injuries</strong> and lost their ability to distinguish melodies but retained the ability to recognize the emotion conveyed by music.</li>
       <li>Researchers noted that these patients had sustained damage to the temporal lobes of the brain, a region involved in comprehending melody; their frontal lobes, which play a role in emotional regulation, were unaffected.</li>
@@ -46,7 +49,7 @@
   <div id="media">
     <br><img src="./images/musicbrain.jpeg" alt="A picture of the human brain with different parts mapped out showing what parts process music" width="300" height="240">  
     <video src="https://www.youtube.com/watch?v=g6-C4NmK0fM" height="300" width="240" controls>Video Not Supported</video>
-    <a href="https://www.hopkinsmedicine.org/health/wellness-and-prevention/keep-your-brain-young-with-music#:~:text=It%20provides%20a%20total%20brain,%2C%20mental%20alertness%2C%20and%20memory." target="_blank"><img src="./images/brainmusic2.webp" height="300" width="240"></a>  
+    <a href="https://www.hopkinsmedicine.org/health/wellness-and-prevention/keep-your-brain-young-with-music#:~:text=It%20provides%20a%20total%20brain,%2C%20mental%20alertness%2C%20and%20memory." target="_blank"><img src="./images/brainmusic2.webp" height="300" width="240" alt="picture of a brain with different parts labeled"></a>  
     <br><em>Click the last picture above to read more about how music affects the brain!</em>
   <!-- Youtube player doesn't work unless I use the embedded code YT provides. Purposely not updating to avoid their TOS -->
     </div>
