--- a/padthai.html
+++ b/padthai.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang ="en">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -8,22 +8,20 @@
 
 <body>
     <h1>Pad Thai</h1>
-    <p><img src="./images/padthai.jpeg"></p>
-    
-    <p><h3>Description</h3></p>
+    <p><img src="./images/padthai.jpeg" alt="golden yellow noodles tossed with chicken, carrots, bean sprouts topped with peanuts, lime, and cilantro"></p>
+
+    <h3>Description</h3>
     <p>Delicious sweet and salty noodles alongside vegetables and your choice of protien.</p>
     <p>Get a well rounded Thai dish without compromising on the taste!</p>
     <!-- Ingredients below -->
 
-   <p><h3>Ingredients</h3></p>
-   <ul>
+    <h3>Ingredients</h3>
+    <ul>
         <li>125 g / 4oz Chang's Pad Thai dried rice sticks</li>
-        <p><strong>Sauce:</strong></p>
         <li>>1 1/2 tbsp tamarind puree</li>
         <li>3 tbsp brown sugar</li>
         <li>2 tbsp fish sauce</li>
         <li>1 1/2 tbsp oyster sauce</li>
-        <p><strong>Stir Fry:</strong></p>
         <li>2 - 3 tbsp vegetable or canola oil</li>
         <li>1/2 onion, sliced (brown, yellow)</li>
         <li>2 garlic cloves, finely chopped</li>
@@ -33,26 +31,31 @@
         <li>1/2 cup firm tofu, cut into 3cm / 1 1/4″ batons</li>
         <li>1/4 cup garlic chives , cut into 3cm / 1 1/4″ pieces</li>
         <li>1/4 cup finely chopped peanuts</li>
-        <p><strong>For Serving:</strong></p>
         <li>Lime wedges (essential)</li>
         <li>Ground chilli or cayenne pepper (optional)</li>
         <li>More beansprouts</li>
     </ul>
 
     <!-- Directions below -->
-    
-    <p><h3>Directions</h3></p>
-        <ol>
-            <li>Place noodles in a large bowl, pour over plenty of boiling water. Soak for 5 minutes, then drain in a colander and quickly rinse under cold water. Don't leave them sitting around for more than 5 - 10 minutes.</li>
-            <li>Mix Sauce in small bowl.</li>
-            <li>Heat 2 tbsp oil in a large non stick pan (or well seasoned skillet) over high heat. Add garlic and onion, cook for 30 seconds.</li>
-            <li>Add chicken and cook for 1 1/2 minutes until mostly cooked through.</li>
-            <li>Push to one side of the pan, pour egg in on the other side. Scramble using the wooden spoon (add touch of extra oil if pan is too dry), then mix into chicken.</li>
-            <li>Add bean sprouts, tofu, noodles then Sauce.</li>
-            <li>Toss gently for about 1 1/2 minutes until Sauce is absorbed by the noodles.</li>
-            <li>Add garlic chives and half the peanuts. Toss through quickly then remove from heat.</li>
-            <li>Serve immediately, sprinkled with remaining peanuts and lime wedges on the side, with a sprinkle of chilli and a handful of extra beansprouts on the side if desired (this is the Thai way!). Squeeze over lime juice to taste before eating.</li>
-        </ol>
+
+    <h3>Directions</h3>
+    <ol>
+        <li>Place noodles in a large bowl, pour over plenty of boiling water. Soak for 5 minutes, then drain in a
+            colander and quickly rinse under cold water. Don't leave them sitting around for more than 5 - 10 minutes.
+        </li>
+        <li>Mix Sauce in small bowl.</li>
+        <li>Heat 2 tbsp oil in a large non stick pan (or well seasoned skillet) over high heat. Add garlic and onion,
+            cook for 30 seconds.</li>
+        <li>Add chicken and cook for 1 1/2 minutes until mostly cooked through.</li>
+        <li>Push to one side of the pan, pour egg in on the other side. Scramble using the wooden spoon (add touch of
+            extra oil if pan is too dry), then mix into chicken.</li>
+        <li>Add bean sprouts, tofu, noodles then Sauce.</li>
+        <li>Toss gently for about 1 1/2 minutes until Sauce is absorbed by the noodles.</li>
+        <li>Add garlic chives and half the peanuts. Toss through quickly then remove from heat.</li>
+        <li>Serve immediately, sprinkled with remaining peanuts and lime wedges on the side, with a sprinkle of chilli
+            and a handful of extra beansprouts on the side if desired (this is the Thai way!). Squeeze over lime juice
+            to taste before eating.</li>
+    </ol>
 </body>
 
 </html>
